# MINI_LLVM

./: .gitignore  LICENSE.md  README.md  SECURITY.md  example.mpy  pyproject.toml  requirement.py  requirements.txt  verify_printers.py
docs/: bytecode_vm.md  ir_ssa.md  language_spec.md  lexer.md  parser.md  phase.md  semantic_analysis.md  walkthrough.md  work.md
examples/: hello.mpy  if_else.mpy  loop.mpy  nested.mpy  optimization_demo.mpy
optimizations/: ssa_branch_simplify.py  ssa_constfold.py  ssa_constprop.py  ssa_dce.py  ssa_jump_thread.py  ssa_phi_simplify.py  ssa_unreachable_elim.py
src/: ast_nodes.py  bytecode.py  bytecode_vm.py  cli.py  compiler_driver.py  ir.py  ir_builder.py  lexer.py  parser.py  semantic.py  ssa_to_bytecode.py
src/printers/: __init__.py  ast_printer.py  ir_printer.py  token_printer.py
tests/: test_branch_simplify.py  test_bytecode.py  test_bytecode_while.py  test_cleanup.py  test_constfold.py  test_constprop.py  test_dce.py  test_ir.py  test_ir_loop.py  test_lexer.py  test_parser.py  test_parser_while.py  test_semantic.py  test_unreachable.py
