[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-llvm"
version = "0.1.0"
description = "Mini-LLVM compiler and CLI"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
mini-llvm = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.printers", "optimizations"]
